--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mind-math",
+  "description": "Website that practice your fundamental mathematics skills",
   "version": "1.0.0",
   "license": "MIT",
   "author": "Leomotors",
+  "type": "module",
+  "repository": "https://github.com/Leomotors/MIND-Is-Not-Difficult",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -14,28 +17,28 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.10",
-    "@sveltejs/kit": "1.0.0-next.229",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.4.0",
-    "leomotors-automation": "^1.0.1",
-    "prettier": "^2.5.1",
+    "@leomotors/scripts": "^3.1.0",
+    "@sveltejs/adapter-vercel": "1.0.0-next.47",
+    "@sveltejs/kit": "1.0.0-next.303",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "autoprefixer": "^10.4.4",
+    "cssnano": "^5.1.5",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
+    "postcss": "^8.4.12",
+    "postcss-load-config": "^3.1.3",
+    "prettier": "^2.6.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "svelte": "^3.46.1",
-    "svelte-check": "^2.3.0",
-    "svelte-preprocess": "^4.10.1",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.6",
+    "svelte-preprocess": "^4.10.4",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "postcss": "^8.4.5",
-    "postcss-load-config": "^3.1.1",
-    "autoprefixer": "^10.4.2",
-    "cssnano": "^5.0.15",
-    "tailwindcss": "^3.0.13"
+    "typescript": "^4.6.3",
+    "vite": "^2.8.6"
   },
-  "type": "module",
   "dependencies": {
     "polynomial-generator": "^1.0.0-pre.2"
   }
