--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html}\" && eslint src && eslint *.{cjs,js}",
+    "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html}\"",
+    "test": "rimraf tests-out/* && tsc -p tsconfig.test.json && playwright test"
   },
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
+    "@playwright/test": "^1.20.1",
     "@sveltejs/adapter-vercel": "1.0.0-next.47",
     "@sveltejs/kit": "1.0.0-next.303",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.5",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.3",
     "prettier": "^2.6.1",
     "prettier-plugin-svelte": "^2.6.0",
+    "rimraf": "^3.0.2",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
     "svelte-preprocess": "^4.10.4",
