--- a/package.json
+++ b/package.json
@@ -15,32 +15,32 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html}\" && eslint src && eslint *.{cjs,js}",
     "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html}\"",
-    "test": "rimraf tests-out/* && tsc -p tsconfig.test.json && playwright test"
+    "test": "playwright test"
   },
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
-    "@playwright/test": "^1.20.1",
-    "@sveltejs/adapter-vercel": "1.0.0-next.47",
-    "@sveltejs/kit": "1.0.0-next.303",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "autoprefixer": "^10.4.4",
-    "cssnano": "^5.1.5",
-    "eslint": "^8.12.0",
+    "@playwright/test": "^1.22.2",
+    "@sveltejs/adapter-vercel": "1.0.0-next.58",
+    "@sveltejs/kit": "1.0.0-next.347",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.10",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
-    "postcss": "^8.4.12",
-    "postcss-load-config": "^3.1.3",
-    "prettier": "^2.6.1",
-    "prettier-plugin-svelte": "^2.6.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
     "rimraf": "^3.0.2",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.6",
-    "svelte-preprocess": "^4.10.4",
-    "tailwindcss": "^3.0.23",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.8.6"
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.2",
+    "svelte-preprocess": "^4.10.6",
+    "tailwindcss": "^3.0.24",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9"
   },
   "dependencies": {
     "polynomial-generator": "^1.0.0-pre.2"
