--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,15 @@
 {
-    "extends": "./.svelte-kit/tsconfig.json"
+    "extends": "./.svelte-kit/tsconfig.json",
+    "compilerOptions": {
+        "paths": {
+            "$lib": ["src/lib"],
+            "$lib/*": ["src/lib/*"],
+            "$components": ["src/components"],
+            "$components/*": ["src/components/*"],
+            "$sections": ["src/sections"],
+            "$sections/*": ["src/sections/*"],
+            "$types": ["src/types"],
+            "$types/*": ["src/types/*"]
+        }
+    }
 }
