--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
+    "@leomotors/sv-components": "^0.2.0",
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-vercel": "1.0.0-next.58",
     "@sveltejs/kit": "1.0.0-next.347",
@@ -29,6 +30,7 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "polynomial-generator": "^1.0.0-pre.3",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
@@ -38,11 +40,9 @@
     "svelte-check": "^2.7.2",
     "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
+    "tailwindcss-global-dark": "^1.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.2",
     "vite": "^2.9.9"
-  },
-  "dependencies": {
-    "polynomial-generator": "^1.0.0-pre.2"
   }
 }
