Implement new version of lib

--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html}\" && eslint src && eslint *.{cjs,js}",
-    "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html}\"",
+    "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html,css}\" && eslint src && eslint *.{cjs,js}",
+    "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html,css}\"",
     "test": "playwright test"
   },
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
-    "@leomotors/sv-components": "^0.2.0",
+    "@leomotors/sv-components": "^0.4.0",
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-vercel": "1.0.0-next.58",
-    "@sveltejs/kit": "1.0.0-next.347",
+    "@sveltejs/kit": "1.0.0-next.348",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
-    "cssnano": "^5.1.10",
-    "eslint": "^8.16.0",
+    "cssnano": "^5.1.11",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "polynomial-generator": "^1.0.0-pre.3",
+    "polynomial-generator": "^1.0.0-pre.4",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
@@ -42,7 +42,7 @@
     "tailwindcss": "^3.0.24",
     "tailwindcss-global-dark": "^1.0.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.3",
     "vite": "^2.9.9"
   }
 }
