--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-vercel": "1.0.0-next.58",
     "@sveltejs/kit": "1.0.0-next.348",
+    "@types/katex": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
@@ -30,11 +31,13 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "katex": "^0.15.6",
     "polynomial-generator": "^1.0.0-pre.4",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "rimraf": "^3.0.2",
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
