--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html,css}\" && eslint src && eslint *.{cjs,js}",
-    "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html,css}\"",
+    "lint": "prettier --check \"*.config.{cjs,js,ts}\" && prettier --check \"{src,tests}/**/*.{ts,svelte,html,css,scss}\" && eslint src && eslint *.{cjs,js}",
+    "format": "prettier --write \"*.config.{cjs,js,ts}\" && prettier --write \"{src,tests}/**/*.{ts,svelte,html,css,scss}\"",
     "test": "playwright test"
   },
   "devDependencies": {
@@ -39,9 +39,10 @@
     "prettier-plugin-svelte": "^2.7.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "rimraf": "^3.0.2",
+    "sass": "^1.49.11",
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
-    "svelte-preprocess": "^4.10.6",
+    "svelte-preprocess": "^4.10.5",
     "tailwindcss": "^3.0.24",
     "tailwindcss-global-dark": "^1.0.1",
     "tslib": "^2.4.0",
