--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "repository": "https://github.com/Leomotors/MIND-Is-Not-Difficult",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "lm-config && svelte-kit dev",
+    "build": "lm-config && svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -24,29 +24,29 @@
     "@sveltejs/adapter-vercel": "1.0.0-next.58",
     "@sveltejs/kit": "1.0.0-next.348",
     "@types/katex": "^0.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.11",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "katex": "^0.15.6",
-    "polynomial-generator": "^1.0.0-pre.4",
+    "katex": "^0.16.0",
+    "polynomial-generator": "^1.0.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "rimraf": "^3.0.2",
-    "sass": "^1.49.11",
+    "sass": "^1.52.2",
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
-    "svelte-preprocess": "^4.10.5",
+    "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.0.24",
     "tailwindcss-global-dark": "^1.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.10"
   }
 }
