--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@leomotors/sv-components": "^0.4.0",
     "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-vercel": "1.0.0-next.58",
-    "@sveltejs/kit": "1.0.0-next.348",
+    "@sveltejs/kit": "1.0.0-next.350",
     "@types/katex": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
@@ -39,14 +39,13 @@
     "prettier-plugin-svelte": "^2.7.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "rimraf": "^3.0.2",
-    "sass": "^1.52.2",
+    "sass": "^1.52.3",
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.1.2",
     "tailwindcss-global-dark": "^1.0.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.10"
+    "typescript": "^4.7.3"
   }
 }
